--- a/game/ultimate-off-road.html
+++ b/game/ultimate-off-road.html
@@ -4,8 +4,8 @@
    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-   <title>Ultimate Off Road Unblocked: Play Now for Free on FAF Games</title>
-   <meta name="description" content="
+   <title>Ultimate Off Road Unblocked: Play Now at 76 Unblocked Games</title>
+   <meta name="description" content="Enjoy intense driving action with Ultimate Off Road Unblocked. Tackle challenging terrains, test your driving skills, and conquer every track.">
    <meta name="keywords" content="Ultimate Off Road Game, 
    truck games online
    pickup truck games 
@@ -22,10 +22,10 @@
    extreme off-road car game download
    best off-road games android
    off-road game download for pc">
-   <meta name="author" content="FAF Games Team">
-  <meta name="publisher" content="FAF Games Team">
+   <meta name="author" content="76 Unblocked Games">
+  <meta name="publisher" content="76 Unblocked Games">
   <meta name="robots" content="index, follow">
-   <link rel="canonical" href="/game/ultimate-off-road.html" />
+   <link rel="canonical" href="https://76-unblockedgames.github.io/game/ultimate-off-road.html" />
    <!-- Favicon -->
    <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
    <!--Bootstrap css-->
@@ -303,7 +303,7 @@
              <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1237,7 +1237,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
