--- a/game/vex-6.html
+++ b/game/vex-6.html
@@ -5,8 +5,8 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Vex 6 Unblocked: Play Now for Free on FAF Games</title>
-    <meta name="description" content="
+    <title>Vex 6 Unblocked: Play Now at 76 Unblocked Games</title>
+    <meta name="description" content="Play Vex 6 Unblocked and test your parkour skills through challenging levels filled with traps, obstacles, and puzzles. Experience smooth controls and exciting gameplay.">
    
     <meta name="title" content="Vex 5, Vex 5 Unblocked">
     <meta name="keywords" content="Vex 5 Game, 
@@ -21,10 +21,10 @@
     vex 5 y8
     vex 5 6
     vex 5 crazy games">
-    <meta name="author" content="FAF Games Team">
-    <meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games">
+    <meta name="publisher" content="76 Unblocked Games">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="/game/vex-6.html" />
+    <link rel="canonical" href="https://76-unblockedgames.github.io/game/vex-6.html" />
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -304,7 +304,7 @@
     <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -758,7 +758,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
