--- a/game/wheely-2.html
+++ b/game/wheely-2.html
@@ -4,9 +4,9 @@
       <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
-      <title>Wheely 2 Unblocked: Play Now for Free on FAF Games</title>
-      <meta name="description" content="
-      <meta name="publisher" content="FAF Games Team">
+      <title>Wheely 2 Unblocked: Play Now at 76 Unblocked Games</title>
+      <meta name="description" content="Enjoy Wheely 2 Unblocked, the exciting puzzle adventure where you help Wheely solve creative challenges. Play directly in your browser without restrictions.">
+      <meta name="publisher" content="76 Unblocked Games">
         <meta name="robots" content="index, follow">
       <meta name="keywords" content="Car Games,Cargame, Car Games Unblocked, Car Unblocked Games, Car Unblocked, Car Game , Games for Kids ,Games for school, 3D Games">
       <meta name="news_keywords" content="wheely 3
@@ -18,8 +18,8 @@
       wheely 2 abcya
       wheely 5
       wheely 1">
-      <meta name="author" content="FAF Games Team">
-      <link rel="canonical" href="/game/wheely-2.html" />
+      <meta name="author" content="76 Unblocked Games">
+      <link rel="canonical" href="https://76-unblockedgames.github.io/game/wheely-2.html" />
       <!-- Favicon -->
       <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
       <!--Bootstrap css-->
@@ -297,7 +297,7 @@
              <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -1231,7 +1231,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
