--- a/game/worlds-hardest-game.html
+++ b/game/worlds-hardest-game.html
@@ -5,8 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="robots" content="index, follow">
-        <title>Worlds Hardest Game: Play Now for Free on FAF Games</title>
-        <meta name="description" content="
+        <title>Worlds Hardest Game: Play Now at 76 Unblocked Games</title>
+        <meta name="description" content="Test your skills and patience with the World's Hardest Game. Dodge obstacles, collect coins, and reach the goal in this challenging puzzle game.">
         <meta name="title" content="Worlds Hardest Game, Worlds Hardest Game Unblocked">
         <meta name="keywords" content="Worlds Hardest Game Game, 
         puzzle games examples
@@ -25,9 +25,9 @@
         world's hardest game 4
         worlds hardest game scratch
         world's hardest game mobile">
-        <meta name="author" content="FAF Games Team">
-       <link rel="canonical" href="/game/worlds-hardest-game.html" />
-        <meta name="publisher" content="FAF Games Team">
+        <meta name="author" content="76 Unblocked Games">
+       <link rel="canonical" href="https://76-unblockedgames.github.io/game/worlds-hardest-game.html" />
+        <meta name="publisher" content="76 Unblocked Games">
         <!-- Favicon -->
         <link rel="icon" type="image/png" sizes="32x32" href="../assets/img/favicon/favicon-32x32.png">
         <!--Bootstrap css-->
@@ -307,7 +307,7 @@
         <!-- Header Area Start -->
         <nav class="fag-header navbar navbar-expand-lg">
           <div class="container">
-              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+              <a class="navbar-brand" href="../index.html"><img src="../assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="menu-toggle"></span>
               </button>
@@ -818,7 +818,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
