--- a/car/index.html
+++ b/car/index.html
@@ -6,14 +6,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Speed through the best car games at FAF Games, featuring car games unblocked, racing games, and other free unblocked games to play online anytime.">
+    <meta name="description" content="Speed through the best car games at 76 Unblocked Games, featuring car games unblocked, racing games, and other free unblocked games to play online anytime.">
     <meta name="keywords" content="car games, free car games, online car games, racing games, driving games, car simulator, 3D car games, drifting games, car racing, car parking games, car stunt games, realistic car games, multiplayer car games, car game unblocked, car driving simulator">
-    <meta name="author" content="FAF Games Team">
-	<meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games Team">
+	<meta name="publisher" content="76 Unblocked Games Team">
 	 <link rel="canonical" href="/car/index.html" />
 	
     <!-- Title -->
-    <title>Play 🚗💨 Car Games on FAF Games | Unblocked Games</title>
+    <title>Play 🚗💨 Car Games on 76 Unblocked | Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -150,7 +150,8 @@
                     <div class="site-heading">
                         <h1 class="heading_animation"><span>car games</span></h1>
                         <p>
-                            Car games are interactive and engaging video games where players control vehicles in various environments. They range from realistic simulations to high-speed arcade races. Players can experience the thrill of driving without leaving their home.
+                            Car 
+				games are fun video games where you drive cars in different places. Some feel very real, like you're driving a real car, while others are fast and exciting like in an action movie. They let you enjoy driving without going anywhere.
                         </p>
                     </div>
                 </div>
