--- a/game/eggy-car.html
+++ b/game/eggy-car.html
@@ -293,6 +293,38 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Eggy Car",
+  "description": "Play Eggy Car Unblocked for free! Enjoy this fun, challenging game where you balance an egg on a moving car. No downloads or sign-ups required - play anywhere, anytime!",
+  "genre": ["Driving", "Physics", "Arcade"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/eggycar/eggy-car-logo.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.4,
+    "bestRating": 5,
+    "reviewCount": 950
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
    </head>
    <body>
        
