--- a/game/moto-x3m-bike-race.html
+++ b/game/moto-x3m-bike-race.html
@@ -290,6 +290,38 @@
           }
           
       </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Moto X3M Bike Race",
+  "description": "Play Moto X3M Bike Race online for free. Enjoy exciting bike stunts, challenging levels, and fun gameplay directly in your browser. No download required",
+  "genre": ["Racing", "Motorbike", "Stunt"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/moto3mx/moto-x3m-bike-race-logo.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.6,
+    "bestRating": 5,
+    "reviewCount": 1500
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
      </head>
      <body>
          
