--- a/game/survival-race.html
+++ b/game/survival-race.html
@@ -303,6 +303,38 @@
     }
     
   </style>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Survival Race",
+  "description": "Survival Race Unblocked - Enjoy a thrilling race game without any restrictions. Dodge obstacles, race fast, and play for free!",
+  "genre": ["Racing", "Survival"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/survival-race.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.5,
+    "bestRating": 5,
+    "reviewCount": 1200
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
    </head>
    <body>
        
