--- a/game/idle-breakout.html
+++ b/game/idle-breakout.html
@@ -300,6 +300,38 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
+		<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Idle Breakout",
+  "description": "Enjoy Idle Breakout Unblocked online. Smash bricks, upgrade balls, and unlock power-ups in this fun idle clicker game. Play now and break them all!",
+  "genre": ["Idle", "Clicker", "Breakout"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/idlebreakout/idle-breakout.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.6,
+    "bestRating": 5,
+    "reviewCount": 950
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
         </head>
 <body>
                    
