--- a/game/angry-gran-run.html
+++ b/game/angry-gran-run.html
@@ -303,6 +303,38 @@
 
   gtag('config', 'G-6BPGNZNTLZ');
 </script>
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "VideoGame",
+  "name": "Angry Gran Run",
+  "description": "Join Angry Gran in a thrilling endless runner game! Dodge obstacles, collect coins, and run through crazy city streets. Play Angry Gran Run online now.",
+  "genre": ["Endless Runner", "Action"],
+  "publisher": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  },
+  "image": "https://76-unblockedgames.github.io/assets/img/angrygranrun/logo.webp",
+  "operatingSystem": "Any web browser",
+  "applicationCategory": "Game",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": 4.4,
+    "bestRating": 5,
+    "reviewCount": 950
+  },
+  "offers": {
+    "@type": "Offer",
+    "price": "0",
+    "priceCurrency": "USD"
+  },
+  "author": {
+    "@type": "Organization",
+    "name": "76 Unblocked Games"
+  }
+}
+</script>
+
        </head>
        <body>
            
