--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content=" Play the best free 2 player games online at FAF Games! 🎮 No downloads, no sign-up—just fun multiplayer action on any device. Play now!">
+    <meta name="description" content=" Play the best free 2 player games online at 76 Unblocked Games! 🎮 No downloads, no sign-up—just fun multiplayer action on any device. Play now!">
     <meta name="keywords" content="2 games, two player games, 2 Player games, two-player-games, online 2 Player games, Classroom 6x 2 Player games, racing games 2 player games, driving games 2 player games, car simulator 2 player games, 3D car games 2 player games, drifting games 2 player games, car racing 2 player games, car parking 2 player games, car stunt 2 player games, realistic 2 player games, multiplayer 2 player games, 2 player games unblocked, driving simulator 2 player games">
-    <meta name="author" content="FAF Games Team">
-	<meta name="publisher" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games ">
+	<meta name="publisher" content="76 Unblocked Games">
 	 <link rel="canonical" href="/2-player-games/index.html" />
     <!-- Title -->
-    <title>2 Player Games 👥 - Play Online for Free! | FAF Games</title>
+    <title>2 Player Games 👥 - Play Online for Free! | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -57,7 +57,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -179,7 +179,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
         <div class="games-single-item img-contain-isotope">
             <div class="games-thumb">
                 <a href="/game/deadshot-io.html">
-                    <img src="https://faf-games.github.io/assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
+                    <img src="https://76-unblockedgames.github.io/assets/img/deadshot-io/deadshot-io.webp" alt="Deadshot.io" title="Deadshot.io" />
                 </a>
             </div>
             <div class="games-desc">
@@ -493,7 +493,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
                                             <a href="/game/shell-shockers.html">
-                                                <img src="https://faf-games.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
+                                                <img src="https://76-unblockedgames.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
@@ -644,7 +644,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -682,7 +682,7 @@ Popular 2 player games include action, racing, fighting, and strategy genres. Wh
                         <div class="footer-bottom-inn">
                             <div class="footer-logo">
                                 <a href="/index.html">
-                                    <img src="/assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />FAF Games
+                                    <img src="/assets/img/logo/logo.png" alt="site logo" style="width: 150px; height: auto;" />76 Unblocked Games
                                 </a>
                             </div>
                             <div class="footer-social">
