--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content=" Play the best free 2 player games online at 76 Unblocked Games! 🎮 No downloads, no sign-up—just fun multiplayer action on any device. Play now!">
+    <meta name="description" content=" Play the best free 2 player games online at 76 Unblocked Games! No downloads, no sign-up—just fun multiplayer action on any device. Play now!">
     <meta name="keywords" content="2 games, two player games, 2 Player games, two-player-games, online 2 Player games, Classroom 6x 2 Player games, racing games 2 player games, driving games 2 player games, car simulator 2 player games, 3D car games 2 player games, drifting games 2 player games, car racing 2 player games, car parking 2 player games, car stunt 2 player games, realistic 2 player games, multiplayer 2 player games, 2 player games unblocked, driving simulator 2 player games">
     <meta name="author" content="76 Unblocked Games ">
 	<meta name="publisher" content="76 Unblocked Games">
 	 <link rel="canonical" href="/2-player-games/index.html" />
     <!-- Title -->
-    <title>2 Player Games 👥 - Play Online for Free! | 76 Unblocked Games</title>
+    <title>2 Player Games - Play Online for Free! | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
