--- a/action/index.html
+++ b/action/index.html
@@ -5,13 +5,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Play thrilling action games at FAF Games, where you can enjoy a huge selection of unblocked games online for free, including shooting and adventure games.">
+    <meta name="description" content="Play thrilling action games at 76 Unblocked Games, where you can enjoy a huge selection of unblocked games online for free, including shooting and adventure games.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
-    <meta name="author" content="FAF Games Team">
+    <meta name="author" content="76 Unblocked Games">
 	<link rel="canonical" href=/action/index.html>
-	<meta name="publisher" content="FAF Games Team">
+	<meta name="publisher" content="76 Unblocked Games">
     <!-- Title -->
-    <title>Action Games 🎬 | Unblocked Games | FAF Games</title>
+    <title>Action Games | Unblocked Games | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -585,7 +585,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
