--- a/bike/index.html
+++ b/bike/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="description" content="Race through Moto X3M and other thrilling motorcycle games at FAF Games. Play unblocked games online, including racing and skill games, all for free.">
+    <meta name="description" content="Race through Moto X3M and other thrilling motorcycle games at 76 Unblocked Games. Play unblocked games online, including racing and skill games, all for free.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
-     <meta name="author" content="FAF Games Team">
-	<meta name="publisher" content="FAF Games Team">
-	 <link rel="canonical" href="/bike/index.html" />
+     <meta name="author" content="76 Unblocked Games">
+	<meta name="publisher" content="76 Unblocked Games">
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/bike/index.html" />
     <!-- Title -->
-    <title>motorcycle Games 🏍️ | Moto X3M Games | Unblocked Games | FAF Games</title>
+    <title>motorcycle Games | Moto X3M Games | Unblocked Games | 76 Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -412,7 +412,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
