--- a/car/index.html
+++ b/car/index.html
@@ -8,12 +8,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Speed through the best car games at 76 Unblocked Games, featuring car games unblocked, racing games, and other free unblocked games to play online anytime.">
     <meta name="keywords" content="car games, free car games, online car games, racing games, driving games, car simulator, 3D car games, drifting games, car racing, car parking games, car stunt games, realistic car games, multiplayer car games, car game unblocked, car driving simulator">
-    <meta name="author" content="76 Unblocked Games Team">
-	<meta name="publisher" content="76 Unblocked Games Team">
-	 <link rel="canonical" href="/car/index.html" />
+    <meta name="author" content="76 Unblocked Games">
+	<meta name="publisher" content="76 Unblocked Games">
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/car/index.html" />
 	
     <!-- Title -->
-    <title>Play 🚗💨 Car Games on 76 Unblocked | Unblocked Games</title>
+    <title>Play Car Games on 76 Unblocked | Unblocked Games</title>
     <!-- Favicon -->
     <link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon/favicon-32x32.png">
     <!--Bootstrap css-->
@@ -57,7 +57,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -1077,7 +1077,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
