--- a/classroom6x/index.html
+++ b/classroom6x/index.html
@@ -9,9 +9,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="description" content="Classroom 6x offers unblocked games for educational fun in schools. Enhance learning with engaging puzzles, car, math, logic, and strategy games safe and accessible!">
     <meta name="keywords" content="car games, free car games, online car games, Classroom 6x, racing games, driving games, car simulator, 3D car games, drifting games, car racing, car parking games, car stunt games, realistic car games, multiplayer car games, car game unblocked, car driving simulator">
-    <meta name="author" content="FAF Games Team">
-	<meta name="publisher" content="FAF Games Team">
-	 <link rel="canonical" href="/classroom6x/index.html" />
+    <meta name="author" content="76 Unblocked Games">
+	<meta name="publisher" content="76 Unblocked Games">
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/classroom6x/index.html" />
     <!-- Title -->
     <title>Classroom 6x | Play Unblocked Games At School</title>
     <!-- Favicon -->
@@ -57,7 +57,7 @@
     <!-- Header Area Start -->
     <nav class="fag-header navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="FAF Games" / style="width: 100px; height: auto;"></a>
+            <a class="navbar-brand" href="/index.html"><img src="/assets/img/logo/logo.png" alt="76 Unblocked Games" / style="width: 100px; height: auto;"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="menu-toggle"></span>
             </button>
@@ -852,7 +852,7 @@
                                 <div class="games-single-item img-contain-isotope">
                                     <div class="games-thumb">
                                             <a href="/game/shell-shockers.html">
-                                                <img src="https://faf-games.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
+                                                <img src="https://76-unblockedgames.github.io/assets/img/shell-shockers/shellshockers.png" alt="Shell Shockers" />
                                             </a>
                                     </div>
                                     <div class="games-desc">
@@ -1201,7 +1201,7 @@
                     <div class="col-lg-6 col-md-6 col-sm-12">
                         <div class="single-footer1">
                             <h3>About us</h3>
-                <p class="footer-text-color">Welcome to FAF Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join FAF Games today and start playing!</p>
+                <p class="footer-text-color">Welcome to 76 Unblocked Games! We create fun and exciting online games for everyone. Our team works hard to make games that are easy to play and full of adventure. Check out our latest games on our <a href="https://76-unblockedgames.github.io/">Unblocked Games</a>. Join 76 Unblocked Games today and start playing!</p>
                         </div>
                     </div>
 					<div class="col-lg-3">
@@ -1247,7 +1247,7 @@
 				             </p>
                             </div>
                             <div class="copyright">
-                                <p class="text-white">&copy; Copyrights 2024 FAF-GAMES - All Rights Reserved</p>
+                                <p class="text-white">&copy; Copyrights 2024 76 Unblocked Games - All Rights Reserved</p>
 				    <p class="text-white">Powered by <a href="https://britishesports.org/nepc/gaming-houses/" target="_blank" rel="noopener"><b>British Esports Federation  </b></a></p>
                             </div>
                         </div>
