--- a/skill/index.html
+++ b/skill/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Challenge yourself with skill games at 76 Unblocked Games, offering a range of unblocked games online, including puzzle, strategy, and action games, all for free.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="76 Unblocked Games">
-	 <link rel="canonical" href="/skill/index.html" />
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/skill/index.html" />
 	<meta name="publisher" content="76 Unblocked Games">
     <!-- Title -->
     <title>Skill Games | Unblocked Games | 76 Unblocked Games</title>
