--- a/adventure/index.html
+++ b/adventure/index.html
@@ -10,7 +10,7 @@
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="76 Unblocked Games">
 	<meta name="publisher" content="76 Unblocked Games">
-	 <link rel="canonical" href="/adventure/index.html" />
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/adventure/index.html" />
     <!-- Title -->
     <title>Adventure Games | Unblocked Games | 76 Unblocked Games</title>
     <!-- Favicon -->
