--- a/action/index.html
+++ b/action/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Play thrilling action games at 76 Unblocked Games, where you can enjoy a huge selection of unblocked games online for free, including shooting and adventure games.">
     <meta name="keyword" content="game, gaming, videogame, developer, steam, studio, team">
     <meta name="author" content="76 Unblocked Games">
-	<link rel="canonical" href=/action/index.html>
+	<link rel="canonical" href=https://76-unblockedgames.github.io/action/index.html>
 	<meta name="publisher" content="76 Unblocked Games">
     <!-- Title -->
     <title>Action Games | Unblocked Games | 76 Unblocked Games</title>
