--- a/2-player-games/index.html
+++ b/2-player-games/index.html
@@ -10,7 +10,7 @@
     <meta name="keywords" content="2 games, two player games, 2 Player games, two-player-games, online 2 Player games, Classroom 6x 2 Player games, racing games 2 player games, driving games 2 player games, car simulator 2 player games, 3D car games 2 player games, drifting games 2 player games, car racing 2 player games, car parking 2 player games, car stunt 2 player games, realistic 2 player games, multiplayer 2 player games, 2 player games unblocked, driving simulator 2 player games">
     <meta name="author" content="76 Unblocked Games ">
 	<meta name="publisher" content="76 Unblocked Games">
-	 <link rel="canonical" href="/2-player-games/index.html" />
+	 <link rel="canonical" href="https://76-unblockedgames.github.io/2-player-games/index.html" />
     <!-- Title -->
     <title>2 Player Games - Play Online for Free! | 76 Unblocked Games</title>
     <!-- Favicon -->
