--- a/privacy.html
+++ b/privacy.html
@@ -208,7 +208,7 @@ section.fag-contact-details-area {
                     <div class="single-contact-box">
                         <h1>Privacy Policy for 76 Unblocked Games (76-unblockedgames.github.io)</h1>
 
-                        <p>At <strong>76 Games Hub</strong>, accessible from <a href="https://76-unblockedgames.github.io" target="_blank">https://76-unblockedgames.github.io</a>, your privacy is important to us. This Privacy Policy describes what information we collect and how we use it.</p>
+                        <p>At <strong>76 Unblocked Games</strong>, accessible from <a href="https://76-unblockedgames.github.io" target="_blank">https://76-unblockedgames.github.io</a>, your privacy is important to us. This Privacy Policy describes what information we collect and how we use it.</p>
 
   <h2>Information We Collect</h2>
   <ul>
