--- a/privacy.html
+++ b/privacy.html
@@ -236,7 +236,7 @@ section.fag-contact-details-area {
   </ul>
 
   <h2>Contact Us</h2>
-  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:  <a href="mailto:support76gameshub@gmail.com">support76gameshub@gmail.com</a></p>
+  <p>If you have any questions or concerns about this Privacy Policy, please contact us at:  <a href="mailto:info@76unblockedgame.com">support76gameshub@gmail.com</a></p>
 
                     </div>
                 </div>
