--- a/about.html
+++ b/about.html
@@ -116,9 +116,9 @@
   <p>We know how frustrating it can be when you finally find a game you want to play and suddenly it’s blocked. That’s why <strong>76 Unblocked Games</strong> was built — for students, office workers, and gamers who just want quick fun, no signup, no annoying popups, and no unnecessary drama.</p>
 
   <h2>Our Mission</h2>
-  <p>Our mission is simple: <strong>Make gaming easy, accessible, and fun for everyone.</strong></p>
+  <p>Our mission is simple: <strong>Make gaming easy, accessible, and fun for everyone.</strong>
 
-  <p>Thank you for being part of this growing community. We’re here to make sure that wherever you are, your favorite games are just one click away.</p>
+  Thank you for being part of this growing community. We’re here to make sure that wherever you are, your favorite games are just one click away.</p>
 
                   </div>
                </div>
