--- a/about.html
+++ b/about.html
@@ -109,8 +109,8 @@
                   <div class="about-top">
                      <h1>About Us</h1>
 
-  <p>Welcome to <strong>76 Unblocked Games</strong> — a platform built for players who want freedom when it comes to online gaming.</p>
-  <p>We started this website with a simple goal: to provide access to fun, engaging, and popular games even in places where most gaming websites are blocked. Whether you're at school, college, or work, we believe that a break with your favorite game shouldn’t be restricted.</p>
+  <p>Welcome to <strong>76 Unblocked Games</strong> — a platform built for players who want freedom when it comes to online gaming.
+  We started this website with a simple goal: to provide access to fun, engaging, and popular games even in places where most gaming websites are blocked. Whether you're at school, college, or work, we believe that a break with your favorite game shouldn’t be restricted.</p>
 
   <h2>Why We Created This Platform</h2>
   <p>We know how frustrating it can be when you finally find a game you want to play and suddenly it’s blocked. That’s why <strong>76 Unblocked Games</strong> was built — for students, office workers, and gamers who just want quick fun, no signup, no annoying popups, and no unnecessary drama.</p>
