--- a/contact.html
+++ b/contact.html
@@ -225,9 +225,10 @@
                     <div class="col-lg-4 col-md-6 col-sm-12">
                         <div class="single-footer">
                             <h3>About us</h3>
-                            <p>Moreover, they ban certain gaming websites and utilize internet filters to restrict others. <br>All gaming sites are blocked by these filters.<br>
-                                Even though it takes a long time, <br>some gaming websites will get unblocked since it is difficult to prohibit every website on the internet, <br>
-                                and because <a href="https://76-unblockedgames.github.io">76 Unblocked Games</a> websites are less likely to be blocked.</p>
+                            <p>In addition to blocking specific gaming platforms, internet filters are often used to limit access to many others.<br>
+  These filters typically restrict the majority of gaming websites.<br>
+  However, despite their efforts, some sites eventually become accessible again since it’s nearly impossible to block every website on the internet.<br>
+  Platforms like <a href="https://76-unblockedgames.github.io" target="_blank">76 Unblocked Games</a> are designed to bypass these restrictions and remain available longer than most.</p>
                         </div>
                     </div>
                     <div class="col-lg-5 col-md-6 col-sm-12">
