--- a/action/index.html
+++ b/action/index.html
@@ -150,9 +150,8 @@
                     <div class="site-heading">
                         <h1 class="heading_animation"><span>action games</span></h1>
              		  <p>
-   				 <strong>Action games</strong> are exciting video games that require <strong>quick reflexes</strong> and sharp thinking. You control a hero who faces tough challenges like defeating enemies or avoiding traps. To win, you need to be fast and smart. These games come in many genres, but all need <strong>speed</strong> and precision. Some focus on <strong>fighting enemies</strong>, while others involve <strong>jumping through obstacles</strong>. 
-   				 <strong>Action games</strong> are thrilling, keeping you focused and making quick decisions. Whether solo or with friends, they get harder as you improve, making them <strong>fun</strong> and full of excitement!
-			</p>
+   				 <strong>Action games</strong> are free online games to play where you must react quickly and think fast. You play as a hero who has to beat enemies or avoid traps. To win, you need to be quick and clever. These games come in different styles, but all need speed and good timing. Some games are about fighting, while others are about jumping over things. 
+   				They keep you focused and help you make fast choices. You can play alone or with friends, and the games get harder as you get better, which makes them even more fun!</p>
 
                      </div>
                 </div>
