--- a/adventure/index.html
+++ b/adventure/index.html
@@ -149,12 +149,8 @@
                         <h1 class="heading_animation"><span>adventure games</span></h1>
                         <p>
 
-                            Adventure games are a type of video game. They are about stories and finding solutions to challenges. These games are not fast, they let you enjoy the story and the world in the game.
-                            In these games, you play as the main character. You go to different places, meet other characters, and solve puzzles. Solving puzzles helps you move forward in the game.
-                            The story is important in adventure games. They are like interactive books or movies. You get to decide what happens in the story.
-                            You can play adventure games on computers, game consoles, or phones. They can be simple with just text, or they can have beautiful graphics.
-                            Adventure games are fun because they make you think and they tell you a story. If you like mysteries or exploring, you might like adventure games.
-                        </p>
+                          Adventure games are a kind of video game that focus on stories and solving problems. These games aren’t fast-paced — they let you take your time and enjoy the story. You play as the main character, explore different places, talk to other characters, and solve puzzles to move ahead. 
+			  The story is a big part of the game, like reading a book or watching a movie that you can control. You choose what happens next. You can play adventure games on a computer, console, or phone. Some are simple with just words, while others have amazing graphics. Adventure games are fun because they make you think and take you on a journey. If you enjoy solving mysteries or exploring, you’ll probably enjoy these games.</p>
                     </div>
                 </div>
             </div>
